Add config & RandomIteratorOperandFinder.