@@ -7,6 +7,7 @@ import laboflieven.common.InstructionOpcode;
 import laboflieven.programiterators.RandomProgramIterator;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class RandomIteratorOperandFinder
 {
@@ -14,7 +15,7 @@ public class RandomIteratorOperandFinder
     {
         var genIterator = new RandomProgramIterator();
         var result = genIterator.iterate(configuration);
-        var operands = result.instructions.stream().map(InstructionMark::getInstructionOpcode).toList();
+        var operands = result.instructions.stream().map(InstructionMark::getInstructionOpcode).collect(Collectors.toList());
         return operands;
     }
 }
